# mqkit

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: code-quality.yml  unit-testing.yml
mqkit/: __init__.py
mqkit/apps/: __init__.py  app.py  concurrencymode.py
mqkit/connections/: __init__.py  connection.py
mqkit/consume/: __init__.py  decorator.py
mqkit/credentials/: __init__.py  credentials.py  plaincredentials.py
mqkit/declarations/: __init__.py  exchangebinding.py  exchangedeclaration.py  queuedeclaration.py
mqkit/endpoints/: __init__.py  endpoint.py  endpointfactory.py  queueendpoint.py
mqkit/engines/: __init__.py  engine.py  rabbitmqengine.py
mqkit/errors/: __init__.py  apperror.py  baddestinationerror.py  configurationerror.py  decodeerror.py  encodeerror.py  endpointerror.py  endpointsignatureerror.py  functionsignatureerror.py  functiontypeerror.py  marshalerror.py  messageerror.py  mqkiterror.py  noforwardtargeterror.py  noretry.py  serializeerror.py  shutdownrequested.py  workerterminatederror.py
mqkit/events/: __init__.py  appeventtype.py
mqkit/logging/: __init__.py
mqkit/marshal/: __init__.py  attributes.py  forward.py  fullytypedserializer.py  queuemessage.py  returntypeserializer.py  serializer.py  typelessserializer.py
mqkit/messaging/: __init__.py  attributes.py  destination.py  exceptionhistoryentry.py  exchange.py  exchangetype.py  forward.py  forwardtarget.py  queue.py  response.py
mqkit/warnings/: __init__.py  configurationwarning.py  mqkitwarning.py  unboundqueuewarning.py
mqkit/workers/: __init__.py  coordinator.py  worker.py
tests/app/: test_app.py
tests/codecs/: test_codec.py  test_jsoncodec.py  test_messagepackcodec.py  test_rawcodec.py  test_yamlcodec.py
tests/common/: __init__.py
tests/connections/: test_amqpconnection.py  test_connection.py
tests/consume/: test_consume.py
tests/credentials/: test_credentials.py
tests/endpoints/: test_endpoint.py  test_queueendpoint.py
tests/engines/: test_createengine.py  test_engine.py  test_rabbitmqengine.py
tests/messaging/: test_exchange.py  test_response.py
tests/retries/: test_immediateretrystrategy.py  test_noretry.py  test_noretrystrategy.py
tests/serializers/: test_fullytypedserializer.py  test_returntypeserializer.py  test_serializer.py  test_typelessserializer.py
tests/threads/: test_coordinator.py  test_monotoniccounter.py  test_threadcoordinator.py  test_threadworker.py
(+26 files in other folders)
