[project]
name = "mqkit"
version = "0.1.0"
description = "Framework for building FastAPI-style RabbitMQ apps"
authors = [
    {name = "Will Hinson",email = "will@hinson.sh"}
]
license = {text = "LGPL-2.1"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgpack (>=1.1.2,<2.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "yarl (>=1.22.0,<2.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.1"
mypy = "^1.19.1"
ruff = "^0.14.10"
pylint = "^4.0.4"
pytest = "^9.0.2"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
